// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser.getSymbols allSymbols 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols call expression 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols call sites 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols class 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols component 1`] = `
"hasJsx: true

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols destruct 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols es6 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols expression 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols finds symbols in an html file 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols flow 1`] = `
"hasJsx: false

hasTypes: true

framework: null"
`;

exports[`Parser.getSymbols func 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols function names 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols jsx 1`] = `
"hasJsx: true

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols math 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols object expressions 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols optional chaining 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols private fields 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols proto 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols react component 1`] = `
"hasJsx: false

hasTypes: false

framework: React"
`;

exports[`Parser.getSymbols regexp 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;

exports[`Parser.getSymbols var 1`] = `
"hasJsx: false

hasTypes: false

framework: null"
`;
